--- a/5_Server/ServletProject/src/main/webapp/WEB-INF/web.xml
+++ b/5_Server/ServletProject/src/main/webapp/WEB-INF/web.xml
@@ -37,4 +37,15 @@
   	<url-pattern>/example2.do</url-pattern>
   </servlet-mapping>
   
+  
+  <servlet>
+  	<servlet-name>example3</servlet-name>
+  	<servlet-class>edu.kh.servlet.ServletEx3</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+  	<servlet-name>example3</servlet-name>
+  	<url-pattern>/example3.do</url-pattern>
+  </servlet-mapping>
+  
 </web-app>
